DT-2 #resolve Flickering should be dealt with.
Chnaged positioning a bit so that the position of the popover would be a
bit more correct. Added a delay befor sgoring the popover, this should
deal with the flickering. Both additions should help with solving
problem of clicking button and opening up LD.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -115,6 +115,10 @@ $dt-white:			#fff;
     text-align: center;
   }
 
+  .dt-single-item-row {
+    margin-right: 10px;
+  }
+
   .dt-date-time {
     color: $dt-grey-lt;
     font-size: 90%;
